@@ -1,7 +1,0 @@
-/*
- * $Id$
- */
-var __ = ganymede.notebook.Notebook.newNotebookContext();
-
-public void display(Object object) { __.display(object); }
-public void print(Object object) { __.print(object); }
