@@ -1,3 +1,9 @@
+2021-03-30  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/notebook/Notebook.java:
+	Added static bootstrap() method to generate JShell bootstrap
+	code.
+
 2021-03-29  Allen D. Ball  <ball@hcf.dev>
 
 	* Added ganymede.jsr223 package with Thymeleaf ScriptEngineFactory
